[package]
name = "pallet-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

sp-io = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-std = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }

frame-benchmarking = { git = "https://github.com/canyon-network/substrate", default-features = false, optional = true , branch = "initial-network" }
frame-support = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
frame-system = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }

canyon-primitives = { path = "../../primitives/", default-features = false }
cp-consensus-poa = { path = "../../primitives/consensus/poa", default-features = false }

[dev-dependencies]
sc-block-builder = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-client-db = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-keyring = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-balances = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
substrate-test-runtime = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
substrate-test-runtime-client = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

cc-consensus-poa = { path = "../../client/consensus/poa" }
cp-permastore = { path = "../../primitives/permastore" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"canyon-primitives/std",
	"cp-consensus-poa/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
