[package]
name = "cp-permastore"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }

sp-api = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-std = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-trie = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-std/std",
	"sp-trie/std",
]
