[package]
name = "cp-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
sp-api = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }

cp-consensus-poa = { path = "../consensus/poa", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"cp-consensus-poa/std",
]
