[package]
name = "cc-consensus-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
async-trait = "0.1.47"
codec = { package = "parity-scale-codec", version = "2.1" }
log = "0.4"
thiserror = "1.0"

sp-api = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-inherents = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-io = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-trie = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

sc-client-api = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

canyon-primitives = { path = "../../../primitives" }
cc-client-db = { path = "../../db" }
cp-consensus-poa = { path = "../../../primitives/consensus/poa" }
cp-permastore = { path = "../../../primitives/permastore" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

sc-block-builder = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-keyring = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-state-machine = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
substrate-test-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
substrate-test-runtime-client = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

[[bench]]
name = "benchmark"
harness = false
