[package]
name = "cc-consensus-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
async-trait = "0.1.47"
codec = { package = "parity-scale-codec", version = "2.3" }
log = "0.4"
thiserror = "1.0"

sp-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-block-builder = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-consensus = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-inherents = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-io = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-trie = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

sc-client-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-consensus = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

canyon-primitives = { path = "../../../primitives" }
cc-datastore = { path = "../../datastore" }
cp-consensus-poa = { path = "../../../primitives/consensus/poa" }
cp-permastore = { path = "../../../primitives/permastore" }
cp-poa = { path = "../../../primitives/poa" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

sc-block-builder = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-keyring = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-state-machine = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
substrate-test-runtime = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
substrate-test-runtime-client = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

[[bench]]
name = "benchmark"
harness = false
