[package]
name = "cp-consensus-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
