[package]
name = "cp-consensus-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

sp-api = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-inherents = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-io = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-std = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-trie = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }

[features]
default = ["std"]
std = [
	"serde",
	"scale-info/std",
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
