[package]
name = "cp-consensus-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "master" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "master" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
